made the watchlist screening automatic, called after checking against existing business rules